--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css" />
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>FIRST ASSIGNMENT!</title>
+    <title>Hello World</title>
     <!-- Used for automated testing -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.min.js" integrity="sha512-jsP/sG70bnt0xNVJt+k9NxQqGYvRrLzWhI+46SSf7oNJeCwdzZlBvoyrAN0zhtVyolGcHNh/9fEgZppG2pH+eA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.css" integrity="sha512-SjDc34mGAkSBKnNMasz1QPVustFyPQUHUO5wxzGNC5x9wQMcHwDHXCNRYowC/6DsX0lqvpCI1mKiVEQkws2olw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.3.7/chai.min.js" integrity="sha512-Pwgr3yHn4Gvztp1GKl0ihhAWLZfqgp4/SbMt4HKW7AymuTQODMCNPE7v1uGapTeOoQQ5Hoz367b4seKpx6j7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.min.js"
+        integrity="sha512-jsP/sG70bnt0xNVJt+k9NxQqGYvRrLzWhI+46SSf7oNJeCwdzZlBvoyrAN0zhtVyolGcHNh/9fEgZppG2pH+eA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.css"
+        integrity="sha512-SjDc34mGAkSBKnNMasz1QPVustFyPQUHUO5wxzGNC5x9wQMcHwDHXCNRYowC/6DsX0lqvpCI1mKiVEQkws2olw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.3.7/chai.min.js"
+        integrity="sha512-Pwgr3yHn4Gvztp1GKl0ihhAWLZfqgp4/SbMt4HKW7AymuTQODMCNPE7v1uGapTeOoQQ5Hoz367b4seKpx6j7Zg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
-<body>
 
-    <!-- Create a header element  -->
+<body>
+    <header>
+        <h1>Lora Roberts</h1>
+    </header>
 
     <!-- Inside the header, add an <h1> element containing your name -->
-
     <main>
-    <!-- Include an image -->
+        <!-- Include an image -->
+        <img src="../images/resume photo.png" />
 
-    <!-- Create an unordered list with 3 list items of fun facts about you -->
+        <!-- Create an unordered list with 3 list items of fun facts about you -->
+        <ul>
+            <li>I'm from Texas</li>
+            <li>I love doing anything creative.</li>
+            <li>A goal of mine is to move out of the country and learn a new language.</li>
+        </ul>
 
     </main>
     <!-- Create a footer element -->
+    <footer>
+        <p>"When we strive to become better than we are, everything around us becomes better too." -Paulo Coelho</p>
+    </footer>
+
 
     <!-- Inside your footer, put a <p> element with your favorite quote -->
 
@@ -38,4 +54,5 @@
     <link rel="stylesheet" href="../test/test.styles.css" />
     <script src="../test/test.js"></script>
 </body>
+
 </html>
