--- a/assignment/index.html
+++ b/assignment/index.html
@@ -18,6 +18,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <script src="./helloWorld.js"></script>
 </head>
 
 <body>
