--- a/assignment/index.html
+++ b/assignment/index.html
@@ -29,6 +29,9 @@
     <main>
         <!-- Include an image -->
         <img src="../images/resume photo.png" />
+       
+    
+        <h3> About Me:</h3>
 
         <!-- Create an unordered list with 3 list items of fun facts about you -->
         <ul>
